Fix jdk.compiler for use with jdk11 bootjdk
Signed-off-by: Keith W. Campbell <keithc@ca.ibm.com>